Corrected Readme and Travis configuration

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,11 +3,9 @@ language: php
 php:
 
 - 7.1
+- nightly
 
 install:
 
 - composer self-update
 - composer update
-- chmod +x ./run-tests.sh
-
-script: ./run-tests.sh
