Prepare for version 1.2
* Add proper exceptions;
* Normalized code style;
* Standardized tests.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,20 @@
 language: php
+sudo: false
 
 php:
+  - 7.1
+  - 7.2
+  - 7.3
+  - 7.4
+  - nightly
 
-- 7.1
-- nightly
+matrix:
+  allow_failures:
+    - php: nightly
 
 install:
+  - composer install
 
-- composer self-update
-- composer update
+script:
+  - composer tests
+  - composer coding-style
