--- a/composer.json
+++ b/composer.json
@@ -40,7 +40,10 @@
         }
     },
     "config": {
-        "sort-packages": true
+        "sort-packages": true,
+        "preferred-install": {
+            "*": "dist"
+        }
     },
     "scripts": {
         "tests": "vendor/bin/phpunit",
