--- a/.github/workflows/php-cs-fixer.yml
+++ b/.github/workflows/php-cs-fixer.yml
@@ -5,6 +5,8 @@ on: [push]
 jobs:
   php-cs-fixer:
     runs-on: ubuntu-latest
+    strategy:
+      fail-fast: true
 
     steps:
       - name: Checkout code
@@ -12,10 +14,18 @@ jobs:
         with:
           ref: ${{ github.head_ref }}
 
-      - name: Run PHP CS Fixer
-        uses: docker://oskarstark/php-cs-fixer-ga
+      - name: Setup PHP
+        uses: shivammathur/setup-php@v2
         with:
-          args: --config=.php_cs.dist
+          php-version: 7.4
+          extensions: mbstring, pdo, sqlite, pdo_sqlite
+          coverage: none
+
+      - name: Install dependencies
+        run: composer install
+
+      - name: run PHP CS Fixer
+        run: vendor/bin/php-cs-fixer fix
 
       - name: Commit changes
         uses: stefanzweifel/git-auto-commit-action@v4
