--- a/.github/workflows/php-stan.yml
+++ b/.github/workflows/php-stan.yml
@@ -1,18 +1,17 @@
-name: Run Tests
+name: PHPStan Analyze
 
 on: [push, pull_request]
 
 jobs:
-  test:
-    runs-on: ${{ matrix.os }}
+  phpStan:
+    runs-on: ubuntu-latest
     strategy:
       fail-fast: true
       matrix:
-        os: [ubuntu-latest, windows-latest]
         php: [8.0, 7.4, 7.3]
         stability: [prefer-lowest, prefer-stable]
 
-    name: P${{ matrix.php }} - ${{ matrix.stability }} - ${{ matrix.os }}
+    name: P${{ matrix.php }} - ${{ matrix.stability }}
 
     steps:
       - name: Checkout code
@@ -28,5 +27,5 @@ jobs:
       - name: Install dependencies
         run: composer install
 
-      - name: Execute tests
-        run: vendor/bin/phpunit
+      - name: Run PHPStan
+        run: vendor/bin/phpstan analyse
