--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,9 @@
         "friendsofphp/php-cs-fixer": "^2.16",
         "oire/php-code-style": "dev-master",
         "phpstan/phpstan": "^0.12.66",
-        "phpunit/phpunit": "^9"
+        "phpunit/phpunit": "^9",
+        "psalm/plugin-phpunit": "^0.15.0",
+        "vimeo/psalm": "^4.4"
     },
     "license": "MIT",
     "authors": [
