Try fixing Psalm

--- a/.github/workflows/psalm.yml
+++ b/.github/workflows/psalm.yml
@@ -19,3 +19,5 @@ jobs:
 
       - name: Run Psalm
         uses: docker://vimeo/psalm-github-actions
+        with:
+          composer_require_dev: true
